compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | using weave;
         | ^^^^^^^^^^^^
       2 | using weave.fs;
         | ^^^^^^^^^^^^^^^
       3 | 
         | 
     ... |
      52 |         public function New() -> Vector4 { }
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      53 |     }
         | ^^^^^
      54 | }
         | ^
